# modapp

./: .flake8  LICENSE  README.md  lint.sh  pyproject.toml
.github/workflows/: ci.yml
modapp/: __init__.py  async_queue.py  base_converter.py  base_model.py  base_transport.py  base_validator.py  client.py  communication_utils.py  converter_utils.py  dependencies.py  endpoints.py  errors.py  models.py  multi_with.py  param_functions.py  params.py  routing.py  server.py  types.py
modapp/background/: __init__.py  concurrency.py  utils.py
modapp/channels/: aiohttp.py  grpc.py  httpx.py  inmemory.py
modapp/communications/: grpc.py  socketio.py  std.py
modapp/converters/: json.py  protobuf.py
modapp/extras/: logs.py  platformdirs.py
modapp/models/: dataclass.py  pydantic.py
modapp/tools/: watch.py
modapp/transports/: grpc.py  grpc_config.py  inmemory.py  inmemory_config.py  socketio.py  web_aiohttp.py  web_aiohttp_config.py  web_socketify.py  web_socketify_config.py
modapp/transports/utils/: free_port.py
modapp/validators/: dataclass.py  pydantic.py
tests/: test_server.py
tests/converters/protobuf/: base_testsuite.py  data.py  test__protobuf__model_to_raw.py  test__protobuf__raw_to_model.py
tests/models/: test_dataclass.py  test_pydantic.py
tests/transports/: base.py  test_aiohttp.py  test_grpc.py  test_web_socketify.py
transports/modapp_py_http_websockets/: pyproject.toml
