[tool.poetry]
name = "modapp"
version = "0.2.7"
description = ""
authors = ["Vladyslav Hnatiuk <vhnatiuk@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
pydantic = "^2.0"
uvloop = { version = "^0.17.0", markers = "sys_platform != 'win32'", optional = true }
winloop = { version = "^0.0.8", markers = "sys_platform == 'win32'", optional = true }
grpclib = { version = "^0.4.5", optional = true }
googleapis-common-protos = { version = "^1.59.1", optional = true }
socketify = { version = "^0.0.27", optional = true }
orjson = {version = "^3.10.3", optional = true}

[tool.poetry.extras]
uvloop = ["uvloop", "winloop"]
grpc = ["grpclib", "googleapis-common-protos"]
web_socketify = ["socketify"]
json = ["orjson"]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
flake8-bugbear = "^22.7.1"
flake8-comprehensions = "^3.10.0"
bandit = "^1.7.4"
safety = "^2.1.1"
mypy = "^1.5.0"
types-protobuf = "^4.21.0.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-memray = { version = "^1.4.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
pyinstrument = "^4.4.0"
pytest-benchmark = "^4.0.0"
grpcio-tools = "^1.56.0"
pytest-asyncio = "^0.21.1"
aiohttp = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39', 'py310', 'py311']
preview = true
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
enable_error_code = ['explicit-override']