[tool.poetry]
name = "modapp"
version = "0.3.11"
description = ""
authors = ["Vladyslav Hnatiuk <vhnatiuk@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
pydantic = "^2.0"
uvloop = { version = "^0.19.0", markers = "sys_platform != 'win32'", optional = true }
winloop = { version = "^0.0.8", markers = "sys_platform == 'win32'", optional = true }
grpclib = { version = "^0.4.7", optional = true }
googleapis-common-protos = { version = "^1.63.2", optional = true }
# fix socketify to 0.0.27, because 0.0.28 has critical issue: https://github.com/cirospaciari/socketify.py/issues/194
socketify = { version = "0.0.27", optional = true }
orjson = { version = "^3.10.3", optional = true }
aiohttp = { extras = ["speedups"], version = "^3.9.5", optional = true }
anyio = {version = "^4.4.0", optional = true}
typing-extensions = "^4.12.2"
pyhumps = {version = "^3.8.0", optional = true}
httpx = {version = "^0.27.0", optional = true}

[tool.poetry.extras]
uvloop = ["uvloop", "winloop"]
grpc = ["grpclib", "googleapis-common-protos"]
web_socketify = ["socketify"]
json = ["orjson"]
web_aiohttp = ["aiohttp"]
anyio = ["anyio"]
case_change = ["pyhumps"]
web_httpx = ["httpx"]

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
flake8-bugbear = "^24.4.26"
flake8-comprehensions = "^3.15.0"
bandit = "^1.7.4"
safety = "^2.1.1"
mypy = "^1.5.0"
types-protobuf = "^4.21.0.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-memray = { version = "^1.4.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
pyinstrument = "^4.4.0"
pytest-benchmark = "^4.0.0"
grpcio-tools = "^1.56.0"
# use pre-release version to be able to use async fixtures with async tests:
# https://github.com/pytest-dev/pytest-asyncio/issues/868
# https://github.com/pytest-dev/pytest-asyncio/issues/706
pytest-asyncio = "^0.24.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39', 'py310', 'py311']
preview = true
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
enable_error_code = ['explicit-override']

[[tool.mypy.overrides]]
module = [
  "modapp.transports.web_socketify",
  "modapp.transports.web_socketify_config"
]
ignore_missing_imports = true
disallow_any_unimported = false
